CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

FIND_LIBRARY(CPPUNIT_LIBRARY NAMES cppunit)

ADD_SUBDIRECTORY(servicebroker)
ADD_SUBDIRECTORY(types)
ADD_SUBDIRECTORY(benchmark)
ADD_SUBDIRECTORY(unittests)
ADD_SUBDIRECTORY(integration)

if(CPPUNIT_LIBRARY)   
   ADD_LIBRARY(testmain main.cpp)   
endif(CPPUNIT_LIBRARY)



